// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAmqpHeaders > should apply options overrides 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": true,
    "messageId": "msg-789",
    "persistent": false,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": "OrderCreated",
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should build config with minimal envelope 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include all iris headers with fully populated envelope 1`] = `
{
  "properties": {
    "correlationId": "corr-1",
    "headers": {
      "x-iris-attempt": "2",
      "x-iris-broadcast": "true",
      "x-iris-correlation-id": "corr-1",
      "x-iris-expiry": "60000",
      "x-iris-max-retries": "3",
      "x-iris-reply-to": "reply-q",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
      "x-user": "custom",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": 5,
    "timestamp": 1700000000000,
    "type": "TestMsg",
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include broadcast header when true 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "true",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include correlation id when present 1`] = `
{
  "properties": {
    "correlationId": "corr-456",
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "corr-456",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include expiry when not null 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "30000",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include reply-to when present 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "reply-queue",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should include user headers 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-custom": "value",
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
      "x-trace-id": "abc-123",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": undefined,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;

exports[`buildAmqpHeaders > should sanitize routing key from topic 1`] = `"orders_created_v2"`;

exports[`buildAmqpHeaders > should set priority on properties when non-zero 1`] = `
{
  "properties": {
    "correlationId": undefined,
    "headers": {
      "x-iris-attempt": "0",
      "x-iris-broadcast": "false",
      "x-iris-correlation-id": "",
      "x-iris-expiry": "",
      "x-iris-max-retries": "0",
      "x-iris-reply-to": "",
      "x-iris-retry-delay": "1000",
      "x-iris-retry-delay-max": "30000",
      "x-iris-retry-jitter": "false",
      "x-iris-retry-multiplier": "2",
      "x-iris-retry-strategy": "constant",
    },
    "mandatory": undefined,
    "messageId": undefined,
    "persistent": true,
    "priority": 7,
    "timestamp": 1700000000000,
    "type": undefined,
  },
  "routingKey": "orders.created",
}
`;
